# Inventory_Management_Assignment

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  API_Documentation.md  Architecture_Diagram.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Co_Pilot_Chat_Export_Summary.md  Copilot_Chat_Journey.md  E-Commerce Inventory Management Service.md  ECommerceInventoryService.sln  ECommerceInventoryService.vcxproj  ECommerceInventoryService.vcxproj.filters  Implementation_Plan.md  Project-structure.md  Project_Summary_Report.md  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Solution_Design.md  Technical_PRD.md  UnitTests.vcxproj  UnitTests.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  chat.json  cmake_install.cmake  run_all.bat
Debug/data/: skus.bak
ECommerceInventoryService.dir/Debug/: ECommerceInventoryService.exe.recipe
UnitTests.dir/Debug/: UnitTests.exe.recipe
coverage_html/: code_Coverage.html  index.html
coverage_html/Modules/: gtest.html  (+3 more)
data/: categories.json  products.bak
docs/: API_Documentation.md  AUDIT_LOGGING.md  BACKUP_RESTORE.md  CONFIGURATION.md  TESTING.md
include/: AuditLogger.h  CategoryHandler.h  ConfigLoader.h  ProductController.h  ProductHandler.h  ProductService.h  SKUHandler.h
src/: AuditLogger.cpp  CategoryHandler.cpp  ConfigLoader.cpp  ProductController.cpp  ProductHandler.cpp  ProductService.cpp  SKUHandler.cpp  main.cpp
tasks/: 01_Project_Setup.md  02_Config_Loader.md  03_Data_Layer.md  04_Audit_Logger.md  05_API_Layer.md  06_Service_Layer.md  07_Testing.md  08_CI_CD.md  09_Documentation.md  10_Review_Finalize.md
tests/: test_audit_logger.cpp  test_category_handler.cpp  test_config_loader.cpp  test_main.cpp  test_product_controller.cpp  test_product_handler.cpp  test_product_service.cpp  test_sku_handler.cpp
(+91 files in other folders)
